Frontend: Try to fix blurry text

--- a/frontend/src/app.pcss
+++ b/frontend/src/app.pcss
@@ -48,7 +48,7 @@
 		--foreground: 212 8% 94%;
 
 		--muted: 212 17.6% 20.7%;
-		--muted-foreground: 212 8% 56.9%;
+		--muted-foreground: 212 8% 40.9%;
 
 		--popover: 212 13% 13.799999999999999%;
 		--popover-foreground: 212 8% 98.45%;
